--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freeserver",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "A simple, open source web framework for NodeJS, designed as an alternative for Apache or Microsoft's Internet Information Services.",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "intrusive-linked-list": "^1.0.1",
     "mime-types": ">= 2.1.0"
   },
